Merge changes from colleague - updated desensitizer core, builtin modules, and spring-boot integration